Implemented Email Module
